--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "A very basic structure for express",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "forever start ./bin/www",
+    "stop": "forever stopall",
+    "list": "forever list"
   },
   "dependencies": {
+    "forever": "*",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
